--- a/Suggestive/src/Suggestive.Web/wwwroot/waitCursor.html
+++ b/Suggestive/src/Suggestive.Web/wwwroot/waitCursor.html
@@ -1,4 +1,4 @@
-﻿<div>
+﻿<div ng-show="show">
     <h3 class="text-center">
         <span class="fa fa-spinner fa-spin"></span> Working hard for you...
     </h3>
