--- a/Suggestive/src/Suggestive.Web/wwwroot/app-views/suggestionEditor.html
+++ b/Suggestive/src/Suggestive.Web/wwwroot/app-views/suggestionEditor.html
@@ -1,5 +1,5 @@
 <div>
-    <h3>Editor</h3>
+    <h3>Editor - {{ vm.Title }}</h3>
 
     <a href="#/" class="btn btn-sm btn-default"><span class="fa fa-angle-left"></span> Back</a>
 </div>
