--- a/Suggestive/src/Suggestive.Web/wwwroot/app-views/suggestionEditor.html
+++ b/Suggestive/src/Suggestive.Web/wwwroot/app-views/suggestionEditor.html
@@ -1,5 +1,9 @@
 <div>
     <h3>Editor - {{ vm.Title }}</h3>
 
+    <wait-cursor display-when="vm.isBusy"></wait-cursor>
+
+    <div class="alert alert-danger" ng-show="vm.errorMessage">{{ vm.errorMessage }}</div>    
+
     <a href="#/" class="btn btn-sm btn-default"><span class="fa fa-angle-left"></span> Back</a>
 </div>
