Added update suggestion actions to the suggestion editor angular controller

--- a/Suggestive/src/Suggestive.Web/wwwroot/app-views/suggestionEditor.html
+++ b/Suggestive/src/Suggestive.Web/wwwroot/app-views/suggestionEditor.html
@@ -3,7 +3,8 @@
 
     <wait-cursor display-when="vm.isBusy"></wait-cursor>
 
-    <div class="alert alert-danger" ng-show="vm.errorMessage">{{ vm.errorMessage }}</div>    
+    <div class="alert alert-danger" ng-show="vm.errorMessage">{{ vm.errorMessage }}</div>
+    <div class="alert alert-success" ng-show="vm.statusMessage">{{ vm.statusMessage }}</div>        
 
 
     <form novalidate name="updateSuggestionForm" ng-submit="vm.updateSuggestion()">
