refactored api calls for get and post suggestions to a seperate data service

--- a/Suggestive/src/Suggestive.Web/wwwroot/app/suggestions.html
+++ b/Suggestive/src/Suggestive.Web/wwwroot/app/suggestions.html
@@ -1,6 +1,6 @@
 ﻿<div>
 
-    <div class="text-danger" ng-show="vm.errorMessage">{{ vm.errorMessage }}</div>
+    <div class="alert alert-danger" ng-show="vm.errorMessage">{{ vm.errorMessage }}</div>
 
     <sg-wait-cursor display-when="vm.isBusy"></sg-wait-cursor>
 
